Updated Gas Generator Design

--- a/docs/turbogg.ipynb
+++ b/docs/turbogg.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "Text(0.5, 1.0, 'Variation of Combustion Temperature with MR')"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x166d9b2ead0>"
+       "<matplotlib.lines.Line2D at 0x22442cc00d0>"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -407,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x166d9ce2950>"
+       "<matplotlib.lines.Line2D at 0x22445026090>"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -488,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x166d9eebdd0>"
+       "<matplotlib.lines.Line2D at 0x22442c43390>"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +572,7 @@
        " &P_{inlet} &= 5.000 \\times 10 ^ {5} \\; \\;\\textrm{(Pa)}\n",
        " &P_{exit} &= 2.543 \\times 10 ^ {5} \\; \\;\\textrm{(Pa)}\n",
        "\\\\[10pt]\n",
+       " P_{act} &= 3.232 \\times 10 ^ {1} \\;\n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -596,7 +597,9 @@
     "\n",
     "P_inlet = P_inlet # Pa\n",
     "\n",
-    "P_exit = P_expand[idx] # Pa"
+    "P_exit = P_expand[idx] # Pa\n",
+    "\n",
+    "P_act = P_req/eta_t"
    ]
   },
   {
@@ -1007,7 +1010,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6 - Turbine Design"
+    "## 6 - Turbine Design"
    ]
   },
   {
@@ -1016,13 +1019,102 @@
    "source": [
     "As we have done the basics for the turbine and gas generator specifications, we can now do some simple mean line design for the turbine.\n",
     "\n",
-    "The target for this design is an impulse design, with a degree of reaction of zero (all expansion occurs in the stator stage of the turbine)."
+    "The target for this design is an impulse design, with a degree of reaction of zero (all expansion occurs in the stator stage of the turbine).\n",
+    "\n",
+    "We need to now do the mean line design of the turbine."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 6.1 - Mean-Line Design of the Turbine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We know that based on Euler's Turbomachinery equation that the power produced by a turbine stage si defined as the following:\n",
+    "\n",
+    "$P = \\dot{m}(U_2 V_{\\theta 2} - U_1 V_{\\theta 1})$\n",
+    "\n",
+    "where $\\dot{m}$ refers to the mass flow rate through the turbine, $U$ refers to the blade velocities and $V$ refers to the radial velocity component of the gas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We already have defined our mass flow rate, so now we need to define our velocity \"triangles\" for the turbine stages.\n",
+    "\n",
+    "Firstly, as we are using a cantilevered turbine, we can define the blade velocity as a function of the RPM of the turbine and radial positions of the inlet and exit conditions of the turbine as follows:\n",
+    "\n",
+    "$P = \\dot{m} N (r_2 V_{\\theta 2} - r_1 V_{\\theta 1})$\n",
+    "\n",
+    "We already know our power requirement, gas generator mass flow and rotational speed for the turbine, this we can dervive the value of that internal parameter accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "P &= 3.232 \\times 10 ^ {1} \\; \\;\\textrm{(kW)}\n",
+       "\\\\[10pt]\n",
+       "m_{dot_{gg}} &= 4.708 \\times 10 ^ {-2} \\; \\;\\textrm{(kg/s)}\n",
+       "\\\\[10pt]\n",
+       "N &= 30000 \\; \\;\\textrm{(rpm)}\n",
+       "\\\\[10pt]\n",
+       "\\mathrm{rot}_{f} &= \\frac{ P \\cdot 1 \\times 10 ^ {3} }{ m_{dot_{gg}} \\cdot \\left( N \\cdot 2 \\cdot \\frac{ \\mathrm{np.pi} }{ 60 } \\right) } \\\\&= \\frac{ 3.232 \\times 10 ^ {1} \\cdot 1 \\times 10 ^ {3} }{ 4.708 \\times 10 ^ {-2} \\cdot \\left( 30000 \\cdot 2 \\cdot \\frac{ np.pi }{ 60 } \\right) } \\\\&= 2.185 \\times 10 ^ {2} \\; \\;\\textrm{(m**2/s)}\\\\[10pt]\n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%render sci_not\n",
+    "\n",
+    "P = P_act # kW\n",
+    "\n",
+    "m_dot_gg = m_dot_gg # kg/s\n",
+    "\n",
+    "N = N # rpm\n",
+    "\n",
+    "rot_f = (P*1e3)/(m_dot_gg*(N*2*np.pi/60)) # m**2/s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have this parameter and that it is fixed, we can do a brief study to investigate the impact of varying inlet and exit velocities so we can better define our required operating criteria.\n",
+    "\n",
+    "There are three key parameters we can realistically play with:\n",
+    "- Radii for the turbine blades\n",
+    "- Inlet and Exit Angles of the Turbine Blade\n",
+    "- Inlet Velocity of the Turbine Blades (from the Stator)\n",
+    "\n",
+    "Key Assumption that will be used here is the turbine blade geometry will be symmetric, implying the inlet and exit relative angles are equal ($\\beta_1 = \\beta_2$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impact of Blade Metal Angles on "
+   ]
   }
  ],
  "metadata": {
