Finalised design for turbine along with rotordynamic analysis

--- a/docs/mechanical/bearings.ipynb
+++ b/docs/mechanical/bearings.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -303,11 +303,11 @@
       "text/latex": [
        "\\[\n",
        "\\begin{aligned}\n",
-       "\\tau_{turbine} &= 3.160 \\; \\;\\textrm{(Nm)}\n",
+       "\\tau_{turbine} &= 2.700 \\; \\;\\textrm{(Nm)}\n",
        "\\\\[10pt]\n",
-       "D_{m} &= 0.140 \\; \n",
+       "D_{m} &= 0.100 \\; \n",
        "\\\\[10pt]\n",
-       "F_{tr} &= \\frac{ \\tau_{turbine} }{ \\frac{ D_{m} }{ 2 } }  = \\frac{ 3.160 }{ \\frac{ 0.140 }{ 2 } } &= 45.143  \n",
+       "F_{tr} &= \\frac{ \\tau_{turbine} }{ \\frac{ D_{m} }{ 2 } }  = \\frac{ 2.700 }{ \\frac{ 0.100 }{ 2 } } &= 54.000  \n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -322,9 +322,9 @@
    "source": [
     "%%render\n",
     "\n",
-    "tau_turbine = 3.16 # Nm\n",
+    "tau_turbine = 2.7 # Nm\n",
     "\n",
-    "D_m = 0.14\n",
+    "D_m = 0.10\n",
     "\n",
     "F_tr = tau_turbine / (D_m/2) "
    ]
@@ -347,25 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "\\[\n",
-       "\\begin{aligned}\n",
-       "F_{a} &= 4486.245 \\; \\;\\textrm{(N)}\n",
-       " &F_{r} &= 794.503 \\; \\;\\textrm{(N)}\n",
-       "\\end{aligned}\n",
-       "\\]"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Latex object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'F_ta' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m F_a \u001b[38;5;241m=\u001b[39m (\u001b[43mF_ta\u001b[49m \u001b[38;5;241m-\u001b[39m F_pa)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m1.2\u001b[39m \u001b[38;5;66;03m# N\u001b[39;00m\n\u001b[0;32m      3\u001b[0m F_r \u001b[38;5;241m=\u001b[39m (F_tr \u001b[38;5;241m+\u001b[39m F_pr)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m1.2\u001b[39m \u001b[38;5;66;03m# N\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'F_ta' is not defined"
+     ]
     }
    ],
    "source": [
