Updated turbine design point, along with some reverse engineering.
- Reverse Engineered the Beta-1 Turbopump to get an idea if the Barske
  efficiency is reasonable or not.
- GG exhaust was assumed to be primarily Oxygen, as defined by the
  exhaust products

--- a/docs/fluidics/turbine_design.ipynb
+++ b/docs/fluidics/turbine_design.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 762,
    "id": "a7480b50",
    "metadata": {},
    "outputs": [],
@@ -109,17 +109,17 @@
     "    \"R\": np.float64(518.9497005130706),\n",
     "    \"ox_stiffness\": 1.0,\n",
     "    \"fu_stiffness\": 1.0,\n",
-    "    \"m_dot_t\": 0.036659,\n",
-    "    \"m_dot_o\": np.float64(0.0183295),\n",
-    "    \"m_dot_f\": np.float64(0.0183295),\n",
+    "    \"m_dot_t\": 0.038654999999999995,\n",
+    "    \"m_dot_o\": np.float64(0.019327499999999997),\n",
+    "    \"m_dot_f\": np.float64(0.019327499999999997),\n",
     "}\n",
     "\n",
     "dic_gg_geom = {\n",
-    "    \"CdA_ox\": np.float64(2.919016897682061e-07),\n",
-    "    \"CdA_fu\": np.float64(2.923844980844603e-07),\n",
-    "    \"A_fu\": np.float64(7.309612452111507e-07),\n",
-    "    \"A_ox\": np.float64(5.838033795364122e-07),\n",
-    "    \"Acc\": 1.4551119217211414e-05,\n",
+    "    \"CdA_ox\": np.float64(3.077950794617968e-07),\n",
+    "    \"CdA_fu\": np.float64(3.083041756036666e-07),\n",
+    "    \"A_fu\": np.float64(7.707604390091664e-07),\n",
+    "    \"A_ox\": np.float64(6.155901589235936e-07),\n",
+    "    \"Acc\": 1.534339489187668e-05,\n",
     "}\n",
     "\n",
     "dic_rotor = {\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 763,
    "id": "296a21e7",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 764,
    "id": "d330bd1f",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 787,
    "id": "caa9128e",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 788,
    "id": "f4ba80f6",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 789,
    "id": "0e680f66",
    "metadata": {},
    "outputs": [
@@ -297,10 +297,10 @@
      "text": [
       "Mach Number: 2.3788960750536274\n",
       "Mach Number: 1.9025668211850286\n",
-      "Current Error: 20.71269618487478 %\n",
-      "Current Error: 1.3549148932844626 %\n",
-      "Current Error: 0.10361983445633934 %\n",
-      "Current Error: 0.007837170770324545 %\n"
+      "Current Error: 20.71263848474734 %\n",
+      "Current Error: 1.3549138499729088 %\n",
+      "Current Error: 0.10361992762318352 %\n",
+      "Current Error: 0.007837190929905728 %\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 790,
    "id": "e5642279",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relative Error: -0.01 %\n"
+      "Relative Error: -0.00 %\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 791,
    "id": "cbd08159",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
       "text/latex": [
        "\\[\n",
        "\\begin{aligned}\n",
-       "m_{dot_{t}} &= 38.655 \\; \\;\\textrm{(g/s)}\n",
+       "m_{dot_{t}} &= 38.657 \\; \\;\\textrm{(g/s)}\n",
        "\\end{aligned}\n",
        "\\]"
       ],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 770,
    "id": "31bafc1b",
    "metadata": {},
    "outputs": [],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 771,
    "id": "98de5998",
    "metadata": {},
    "outputs": [
@@ -493,18 +493,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.013804e+06</td>\n",
-       "      <td>0.078897</td>\n",
+       "      <td>0.078898</td>\n",
        "      <td>0.650651</td>\n",
-       "      <td>0.269487</td>\n",
+       "      <td>0.269486</td>\n",
        "      <td>0.010417</td>\n",
-       "      <td>0.730513</td>\n",
+       "      <td>0.730514</td>\n",
        "      <td>0.85</td>\n",
        "      <td>0.282785</td>\n",
        "      <td>0.020823</td>\n",
        "      <td>0.185756</td>\n",
-       "      <td>7279.472854</td>\n",
-       "      <td>7.279473</td>\n",
-       "      <td>2.780554</td>\n",
+       "      <td>7279.514067</td>\n",
+       "      <td>7.279514</td>\n",
+       "      <td>2.78057</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -512,13 +512,13 @@
       ],
       "text/plain": [
        "             dh       eps     phi_r     phi_l  m_leakage     eta_l   phi  \\\n",
-       "0  1.013804e+06  0.078897  0.650651  0.269487   0.010417  0.730513  0.85   \n",
+       "0  1.013804e+06  0.078898  0.650651  0.269486   0.010417  0.730514  0.85   \n",
        "\n",
        "      eta_h  zeta_eps     eta_o        Power  Power (kW)  Torque (Nm)  \n",
-       "0  0.282785  0.020823  0.185756  7279.472854    7.279473     2.780554  "
+       "0  0.282785  0.020823  0.185756  7279.514067    7.279514      2.78057  "
       ]
      },
-     "execution_count": 751,
+     "execution_count": 771,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 772,
    "id": "17ddc9af",
    "metadata": {},
    "outputs": [
@@ -596,19 +596,19 @@
        "      <td>1.666667</td>\n",
        "      <td>10.5772</td>\n",
        "      <td>6.79658</td>\n",
-       "      <td>2.926808</td>\n",
-       "      <td>2.333561</td>\n",
+       "      <td>2.92681</td>\n",
+       "      <td>2.333562</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    p_0       p_1     p_1o   p_1o_r    p_2o_r      p_2o\n",
-       "0  25.0  1.666667  10.5772  6.79658  2.926808  2.333561"
+       "    p_0       p_1     p_1o   p_1o_r   p_2o_r      p_2o\n",
+       "0  25.0  1.666667  10.5772  6.79658  2.92681  2.333562"
       ]
      },
-     "execution_count": 752,
+     "execution_count": 772,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 773,
    "id": "ac285f90",
    "metadata": {},
    "outputs": [
@@ -665,8 +665,8 @@
        "      <td>869.313446</td>\n",
        "      <td>669.407979</td>\n",
        "      <td>816.529529</td>\n",
-       "      <td>754.246157</td>\n",
-       "      <td>791.070783</td>\n",
+       "      <td>754.246075</td>\n",
+       "      <td>791.070762</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -674,10 +674,10 @@
       ],
       "text/plain": [
        "          t_0         t_1      t_1o_r         t_2        t_2o\n",
-       "0  869.313446  669.407979  816.529529  754.246157  791.070783"
+       "0  869.313446  669.407979  816.529529  754.246075  791.070762"
       ]
      },
-     "execution_count": 753,
+     "execution_count": 773,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 774,
    "id": "caeef526",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comparison of Throat Calculated using CEA: 11.2 %\n"
+      "Comparison of Throat Calculated using CEA: 5.5 %\n"
      ]
     },
     {
@@ -752,8 +752,8 @@
        "      <td>0.1434</td>\n",
        "      <td>0.151215</td>\n",
        "      <td>0.35805</td>\n",
-       "      <td>2.485093</td>\n",
-       "      <td>5.31526</td>\n",
+       "      <td>2.55185</td>\n",
+       "      <td>5.315272</td>\n",
        "      <td>4.112829</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -765,10 +765,10 @@
        "0  0.147308  0.000067  0.000016  0.005315  0.007815  0.1434  0.151215   \n",
        "\n",
        "        AR  Nozzle Throat (mm)  Nozzle Exit (mm)       eps  \n",
-       "0  0.35805            2.485093           5.31526  4.112829  "
+       "0  0.35805             2.55185          5.315272  4.112829  "
       ]
      },
-     "execution_count": 754,
+     "execution_count": 774,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 775,
    "id": "7ef77265",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
        "      <th>0</th>\n",
        "      <td>1.737045</td>\n",
        "      <td>1.537585</td>\n",
-       "      <td>1.000431</td>\n",
+       "      <td>1.000432</td>\n",
        "      <td>0.745535</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -840,10 +840,10 @@
       ],
       "text/plain": [
        "   m_star_c1  m_star_w1  m_star_w2  m_star_c2\n",
-       "0   1.737045   1.537585   1.000431   0.745535"
+       "0   1.737045   1.537585   1.000432   0.745535"
       ]
      },
-     "execution_count": 755,
+     "execution_count": 775,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 776,
    "id": "71bae886",
    "metadata": {},
    "outputs": [
@@ -897,7 +897,7 @@
        "      <th>0</th>\n",
        "      <td>66.504234</td>\n",
        "      <td>89.51122</td>\n",
-       "      <td>34.315683</td>\n",
+       "      <td>34.315713</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -905,10 +905,10 @@
       ],
       "text/plain": [
        "      beta_1    beta_2    alpha_2\n",
-       "0  66.504234  89.51122  34.315683"
+       "0  66.504234  89.51122  34.315713"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 776,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 777,
    "id": "a991ea29",
    "metadata": {},
    "outputs": [
@@ -970,9 +970,9 @@
        "      <td>1210.34995</td>\n",
        "      <td>1038.333265</td>\n",
        "      <td>675.301308</td>\n",
-       "      <td>675.592283</td>\n",
-       "      <td>519.478755</td>\n",
-       "      <td>664.690261</td>\n",
+       "      <td>675.592729</td>\n",
+       "      <td>519.479192</td>\n",
+       "      <td>664.690252</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -980,13 +980,13 @@
       ],
       "text/plain": [
        "            u         c_1s         c_1          w_1    a_star_2         w_2  \\\n",
-       "0  185.112345  1423.941118  1210.34995  1038.333265  675.301308  675.592283   \n",
+       "0  185.112345  1423.941118  1210.34995  1038.333265  675.301308  675.592729   \n",
        "\n",
        "          c_2    a_star_3  \n",
-       "0  519.478755  664.690261  "
+       "0  519.479192  664.690252  "
       ]
      },
-     "execution_count": 757,
+     "execution_count": 777,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 778,
    "id": "ac87630f",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
        " 'M_e_margin': np.float64(0.028311013890438833)}"
       ]
      },
-     "execution_count": 758,
+     "execution_count": 778,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 779,
    "id": "5e821599",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 780,
    "id": "3f9f5f36",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 781,
    "id": "656aec2e",
    "metadata": {},
    "outputs": [
