Removed Index for blade File

--- a/docs/fluidics/turbine_design.ipynb
+++ b/docs/fluidics/turbine_design.ipynb
@@ -1186,17 +1186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 215,
    "id": "c77d19fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x20bbe15a0d0>]"
+       "[<matplotlib.lines.Line2D at 0x20bbe13b910>]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1213,7 +1213,7 @@
    ],
    "source": [
     "k = super.generate_xy()\n",
-    "k.to_csv(\"blade.txt\", sep=\"\\t\")\n",
+    "k.to_csv(\"blade.txt\", sep=\"\\t\", index=False)\n",
     "\n",
     "plt.plot(k[\"x\"], k[\"y\"])"
    ]
