Reran the turbine and gas generator design based on lower velocity rat
- Added section to turbine design doc including revision history for
  rotor

--- a/docs/fluidics/gas_generator.ipynb
+++ b/docs/fluidics/gas_generator.ipynb
@@ -481,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f1817b1350>]"
+       "[<matplotlib.lines.Line2D at 0x23618ba9a10>]"
       ]
      },
      "execution_count": 9,
@@ -614,7 +614,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1f183d15d90>"
+       "<matplotlib.lines.Line2D at 0x2361b083e90>"
       ]
      },
      "execution_count": 11,
@@ -2995,7 +2995,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1f1840b14d0>"
+       "<matplotlib.lines.Line2D at 0x2361b68acd0>"
       ]
      },
      "execution_count": 24,
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "1a6b8ea5",
    "metadata": {},
    "outputs": [
@@ -3122,12 +3122,12 @@
        " 'R': 504.5591863293963,\n",
        " 'ox_stiffness': 1.0,\n",
        " 'fu_stiffness': 1.0,\n",
-       " 'm_dot_t': np.float64(0.034698),\n",
-       " 'm_dot_o': np.float64(0.017349),\n",
-       " 'm_dot_f': np.float64(0.017349)}"
+       " 'm_dot_t': np.float64(0.039124),\n",
+       " 'm_dot_o': np.float64(0.019562),\n",
+       " 'm_dot_f': np.float64(0.019562)}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3138,26 +3138,26 @@
     "\n",
     "GG.injector_cond(ox_in=Nitrous, fu_in=IPA, cdo=Cd_o, cdf=Cd_f)\n",
     "\n",
-    "GG.size_system(m_dot=34.698e-3, eta_c=eta_c)"
+    "GG.size_system(m_dot=39.124e-3, eta_c=eta_c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "8ea30729",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CdA_ox': np.float64(2.762869917776594e-07),\n",
-       " 'CdA_fu': np.float64(2.7674397322716395e-07),\n",
-       " 'A_fu': np.float64(6.918599330679098e-07),\n",
-       " 'A_ox': np.float64(5.525739835553188e-07),\n",
-       " 'Acc': np.float64(1.3802848842750204e-05)}"
+       "{'CdA_ox': np.float64(3.1152954828258537e-07),\n",
+       " 'CdA_fu': np.float64(3.120448212732596e-07),\n",
+       " 'A_fu': np.float64(7.80112053183149e-07),\n",
+       " 'A_ox': np.float64(6.230590965651707e-07),\n",
+       " 'Acc': np.float64(1.556350965830189e-05)}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
