Implemented pump design doc, included some thermal history evaluation
- Updated pump sizing also completed

--- a/docs/mechanical/bearings.ipynb
+++ b/docs/mechanical/bearings.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -347,15 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%render` not found.\n"
-     ]
+     "data": {
+      "text/latex": [
+       "\\[\n",
+       "\\begin{aligned}\n",
+       "F_{a} &= 4486.245 \\; \\;\\textrm{(N)}\n",
+       " &F_{r} &= 805.131 \\; \\;\\textrm{(N)}\n",
+       "\\end{aligned}\n",
+       "\\]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
